# filamentcolors.xyz

./: .aiignore  .gitattributes  .gitignore  .isort.cfg  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  format.sh  manage.py  notes.md  pyproject.toml  test.md  test.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: add_to_project.yml  dependabot_auto_merge.yml  deploy_to_prod.yml  issue_automation.yml  junie.yml  ping_bugsnag.yml  run_tests.yml
.junie/: guidelines.md
extras/: end_maintenance.sh  filamentcolors.conf  fixed_get_tumblr_oauth.py  gunicorn.service  gunicorn.socket  maintenance_page.html  notes.txt  restart_app.sh  start_maintenance.sh  under_maintenance.html  update.sh
filamentcolors/: __init__.py  admin.py  altcha_views.py  bluesky.py  colors.py  constants.py  exceptions.py  forms.py  helpers.py  manage.py  markdown_helpers.py  middleware.py  models.py  pantone.db  sitemaps.py  social_media.py  staff_views.py  status.py  twitter_helpers.py  urls.py  views.py  wsgi.py
filamentcolors/api/: serializers.py  taggit_serializer.py  throttles.py  urls.py  views.py
filamentcolors/appstatic/: robots.txt  swatch.stl
filamentcolors/appstatic/css/: main.css
filamentcolors/appstatic/js/: email_magic.js  emailmagic.js  library-pagination.js  multiselect.js  multistepmodal.js
filamentcolors/filamentcolors/: urls.py  views.py  wsgi.py
filamentcolors/filamentcolors/settings/: local.py  prod.py  routing.py
filamentcolors/images/css/: main.css
filamentcolors/management/commands/: backfill_lab.py  bootstrap_generic_types.py  fix_db_dates.py  force_library_rebuild.py  generate_opengraph_images.py  get_bad_links.py  import_pantone_ral.py  llms_txt.py  mark_all_existing_swatches_as_uploaded.py  post_random_new_swatch.py  remove_mfr_links.py  seed_swatches.py  tweet_swatch.py
filamentcolors/markdown_helpers/: admonition.py  image_helper.py  twitter_mention.py  urls.py  views.py
filamentcolors/migrations/: 0001_initial.py  0002_auto_20190303_1851.py  0003_auto_20190303_1928.py  0004_filamenttype_manufacturer.py  0005_auto_20190303_1933.py  0006_auto_20190303_1936.py  0007_auto_20190304_0107.py  0008_auto_20190323_2357.py  0009_swatch_regenerate_info.py  0010_genericfile.py  0011_auto_20190515_0146.py  0012_auto_20191104_0316.py  0013_auto_20191104_0343.py  0014_auto_20191219_0633.py  0015_auto_20200327_0106.py  0016_delete_printer.py  0017_swatch_published.py  0018_auto_20200619_0202.py  0019_swatch_donated_by.py  0020_post.py  0021_post_date_added.py  0021_post_enable_preview.py  0022_auto_20200819_0151.py  0022_post_subtitle.py  0023_auto_20211015_2111.py  0024_remove_swatch_tags.py  0025_pantone_ral.py  0026_swatch_closest_pantone_1_swatch_closest_pantone_2_and_more.py  0027_swatch_rgb_b_swatch_rgb_g_swatch_rgb_r_and_more.py  0028_genericfile_name_alter_swatch_color_parent.py  0029_alter_filamenttype_parent_type_and_more.py  0030_alter_swatch_hex_color.py  0031_swatch_date_published.py  0032_swatch_alt_color_parent.py  0033_alter_swatch_alt_color_parent.py  0034_genericfile_alt_text.py  0035_manufacturer_swap_purchase_buttons.py  0036_alter_manufacturer_swap_purchase_buttons.py  0037_manufacturer_affiliate_portal_and_more.py  0038_swatch_tags.py  (+22 more)
filamentcolors/settings/: base.py  local.py  prod.py  routing.py  testing.py
filamentcolors/templates/: 400.html  404.html  500.html  _loader.html  about.html  base.html  donations.html  generic_form.html  home.html  inventory.html  library.html  main.css  partial_base.html  post_detail.html  post_list.html  swatch_detail.html  vrrf.html
filamentcolors/templates/admin/: submit_line.html
filamentcolors/templates/components/: altcha.partial  eyedropper.partial  inventory_line_item.partial
filamentcolors/templates/favicons/: browserconfig.xml  site.webmanifest
filamentcolors/templates/htmx_partials/: donation_sort_view.partial  welcome_experience_photo.partial  welcome_experience_video.partial
filamentcolors/templates/modals/: color_scheme_modal.partial  modal_base.html  patreon_modal.partial  settings_modal.partial  similar_colors_modal.partial  welcome_experience_modal.partial  welcome_modal.partial
filamentcolors/templates/partials/: README.md  amazon_purchase_button.partial  bootstrap.partial  browser_console_message.partial  card.partial  collection_edit_button.partial  color-scheme-modal.partial  color-warning.partial  color_scheme_modal.partial  colormatch_results.partial  colormatch_spinner.partial  complement_color_box.partial  copy_url_to_clipboard_button.partial  delta_e_badge.partial  external_link_icon.partial  eyedropper.partial  filter_bar.partial  footer.partial  head.partial  hex_color_search_warning.partial  infinite_scroll_sentinel.partial  library_swatch_display.partial  loading_screen.partial  manufacturer_library_unavailable_swatches_notice.partial  messages.partial  mfr_purchase_button.partial  multi_step_modal_js.partial  multiple_swatch_cards.partial  multiselect_js.partial  navbar.partial  navbar_message.partial  no-js-alert.partial  pagination_extras.partial  pagination_indicator.partial  patreon_modal.partial  (+10 more)
filamentcolors/templatetags/: delta_e.py  sameas.py  subtract.py
filamentcolors/tests/: conftest.py  constants.py  helpers.py  test_api_collection_pagination.py  test_api_library.py  test_awin_affiliate.py  test_bluesky.py  test_collections.py  test_colormatch.py  test_error_pages.py  test_inventory.py  test_is_sql_injection.py  test_library.py  test_manufacturer_filter.py  test_middleware_xfc.py  test_opengraph.py  test_pagination_flag.py  test_swatch.py  test_swatch_detail.py  urls.py
filamentcolors/tumblr/: README.md  __init__.py  helpers.py  request.py
(+60 files in other folders)
