[tool.poetry]
name = "filamentcolors"
version = "3.12.4"
description = "The source code for a small website to compare pieces of printed filament."
authors = ["Joe Kaufeld <opensource@joekaufeld.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
django = "^5.1"
Pillow = "^10.4.0"
sorl-thumbnail = "^12.10.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
colorcorrect = "^0.9.1"
colormath = { git = "https://github.com/itsthejoker/python-colormath.git", branch = "master" }
django-taggit = "^6.0.0"
colorthief = "^0.2.1"
djangorestframework = "^3.15.2"
numpy = "^2.0.1"
django-widget-tweaks = "^1.5.0"
regex = "^2024.7.24"
django-cors-headers = "^4.4.0"
wheel = "^0.44.0"
django-filter = "^24.3"
setuptools = "^72.1.0"
django-htmx = "^1.19.0"
django-unused-media = "^0.2.2"
django-cleanup = "^8.1.0"
imagecodecs = "^2024.6.1"
httpx = "^0.27.0"
pandas = "^2.2.2"
plotly = "^5.23.0"
django-plausible-proxy = "^0.5.1"
requests-oauthlib = "^2.0.0"
oauthlib = "^3.2.2"
python-dateutil = "^2.9.0.post0"
bugsnag = "^4.7.1"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.8.0"
better-exceptions = "^0.3.3"
ipdb = "^0.13.13"
beautifulsoup4 = "^4.12.3"
isort = "^5.13.2"
seed-isort-config = "^2.2.0"
black = "^24.8.0"
django-debug-toolbar = "^4.4.6"
djade = "^1.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "filamentcolors.settings.testing"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
