[tool.poetry]
name = "filamentcolors"
version = "4.12.4"
description = "The source code for a small website to compare pieces of printed filament."
authors = ["Joe Kaufeld <opensource@joekaufeld.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
django = "^5.2"
Pillow = "^12.0.0"
sorl-thumbnail = "^12.10.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
colorcorrect = "^0.9.1"
colormath = { git = "https://github.com/itsthejoker/python-colormath.git", branch = "master" }
django-taggit = "^6.0.0"
colorthief = "^0.2.1"
djangorestframework = "^3.16.1"
numpy = "^2.0.1"
django-widget-tweaks = "^1.5.0"
regex = "^2025.10.23"
django-cors-headers = "^4.8.0"
wheel = "^0.45.1"
django-filter = "^25.2"
setuptools = "^80.9.0"
django-htmx = "^1.24.1"
django-unused-media = "^0.2.2"
django-cleanup = "^9.0.0"
imagecodecs = "^2025.3.30"
httpx = "^0.28.1"
pandas = "^2.3.3"
plotly = "^6.5.0"
django-plausible-proxy = "^0.5.1"
requests-oauthlib = "^2.0.0"
oauthlib = "^3.3.1"
python-dateutil = "^2.9.0.post0"
bugsnag = "^4.7.1"
bs4 = "^0.0.2"
altcha = "^0.2.0"
html2image = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-django = "^4.8.0"
better-exceptions = "^0.3.3"
ipdb = "^0.13.13"
beautifulsoup4 = "^4.14.2"
isort = "^7.0.0"
seed-isort-config = "^2.2.0"
black = "^25.11.0"
django-debug-toolbar = "^6.1.0"
djade = "^1.6.0"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "filamentcolors.settings.testing"
# -- recommended but optional:
python_files = ["test_*.py"]
addopts = "--cov --cov-report html"

[tool.coverage.run]
omit = [
    "local_settings.py",
    # this file is majority bundled third party package
    "filamentcolors/colors.py",
    "filamentcolors/management/*",
    "filamentcolors/migrations/*",
    "filamentcolors/tests/*",
]
